[gd_scene load_steps=26 format=3 uid="uid://cusvpxp4in3ur"]

[ext_resource type="Texture2D" uid="uid://cmkk61jgsrbf0" path="res://Textures/ETMiniGame/ETBackground.png" id="1_frait"]
[ext_resource type="Script" path="res://Scripts/ETMinigame.gd" id="1_h6rx0"]
[ext_resource type="Texture2D" uid="uid://btah8yg6yo1q0" path="res://Textures/ETMiniGame/ETHand.png" id="2_a14r8"]
[ext_resource type="Texture2D" uid="uid://bap8ifbar8jhk" path="res://Textures/ETMiniGame/ETPhone.png" id="3_jwut5"]
[ext_resource type="Script" path="res://Scripts/ETHand.gd" id="4_48xi3"]
[ext_resource type="Texture2D" uid="uid://ctbtbkqgjv3yd" path="res://Textures/ETMiniGame/UI/Timer.png" id="4_i46gc"]
[ext_resource type="Texture2D" uid="uid://c0b1y05jrq0yo" path="res://Textures/ETMiniGame/UI/Instructions.png" id="5_agtaa"]
[ext_resource type="FontFile" uid="uid://5541nbtfqqog" path="res://Fonts/Dosis-VariableFont_wght.ttf" id="5_s2dr5"]
[ext_resource type="AudioStream" uid="uid://cuah2xwykv2c6" path="res://Music/ETMinigame/EtSong.mp3" id="9_3dk8w"]
[ext_resource type="AudioStream" uid="uid://tvl8fj2iti8p" path="res://SFX/ET/PhoneCalling.mp3" id="10_31l73"]
[ext_resource type="Texture2D" uid="uid://d1forwcyvsd3c" path="res://Textures/ETMiniGame/WinAnim1.png" id="11_r0i53"]
[ext_resource type="Texture2D" uid="uid://dyjvqm3wgxi1h" path="res://Textures/ETMiniGame/WinAnim2.png" id="12_rsw78"]
[ext_resource type="Texture2D" uid="uid://bqo241wfge7g2" path="res://Textures/ETMiniGame/WinAnim3.png" id="13_uah5n"]
[ext_resource type="AudioStream" uid="uid://crjglbkr2dr0w" path="res://SFX/IndianaJones/ComicShout.mp3" id="14_a8u5r"]
[ext_resource type="Texture2D" uid="uid://cpxi5lyj8dtmm" path="res://Textures/ETMiniGame/LoseAnim1.png" id="15_2gu8e"]
[ext_resource type="Texture2D" uid="uid://cu5lnkwgms7a2" path="res://Textures/ETMiniGame/LoseAnim2.png" id="16_aywrg"]
[ext_resource type="AudioStream" uid="uid://bcv7sq58uovcg" path="res://SFX/ET/Neuralizer.mp3" id="17_uigep"]
[ext_resource type="AudioStream" uid="uid://cxy07oiim8076" path="res://SFX/ET/running-in-grass-6237.mp3" id="18_m1fkh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6wlo"]
size = Vector2(226.25, 375.613)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nf4d3"]
size = Vector2(65, 76.875)

[sub_resource type="Animation" id="Animation_1nucr"]
resource_name = "win_anim"
length = 5.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UFO:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3.1, 3.4, 4.1),
"transitions": PackedFloat32Array(1, 0.25, 1),
"update": 0,
"values": [Vector2(1185, 263), Vector2(841, 249), Vector2(395, 351)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ET:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.1, 4.1, 4.6, 4.9, 5, 5.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(135, 577), Vector2(401, 446), Vector2(401, 350), Vector2(401, 405), Vector2(401, 345), Vector2(401, 485)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UFO/UFOLight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.1, 4.1, 4.7, 4.9, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PhoneCalling:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Phone:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(702, 368), Vector2(702, 753)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shout:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(5.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Music:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -30.5]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Running:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3.6, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_abmmu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UFO:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1185, 263)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ET:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(135, 577)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UFO/UFOLight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Phone:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(702, 368)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Music:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Label:theme_override_font_sizes/font_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [75]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MIB:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-278, 327)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MIB/MIBLight:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("MIB/MIBLight:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Running:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5a8kn"]
resource_name = "start_anim"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Label:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [50, 75, 100]
}

[sub_resource type="Animation" id="Animation_naypk"]
resource_name = "lose_anim"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Phone:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(702, 368), Vector2(702, 733)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MIB:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-278, 327), Vector2(480, 327)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MIB/MIBLight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MIB/MIBLight:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(6, 6)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Neuralizer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jndra"]
_data = {
"RESET": SubResource("Animation_abmmu"),
"lose_anim": SubResource("Animation_naypk"),
"start_anim": SubResource("Animation_5a8kn"),
"win_anim": SubResource("Animation_1nucr")
}

[node name="EtMinigame" type="Node2D"]
script = ExtResource("1_h6rx0")

[node name="BG" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("1_frait")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Phone" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(702, 368)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_jwut5")

[node name="PhoneArea2d" type="Area2D" parent="CanvasLayer/Phone"]

[node name="PhoneCollision" type="CollisionShape2D" parent="CanvasLayer/Phone/PhoneArea2d"]
position = Vector2(72.2283, -237.457)
rotation = -0.15708
shape = SubResource("RectangleShape2D_l6wlo")

[node name="UI_Timer" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(109.5, 49)
texture = ExtResource("4_i46gc")

[node name="TimerLabel" type="Label" parent="CanvasLayer/UI_Timer"]
offset_left = -42.5
offset_top = -21.0
offset_right = 91.5
offset_bottom = 18.0
theme_override_colors/font_color = Color(0.156863, 0.682353, 0.921569, 1)
theme_override_fonts/font = ExtResource("5_s2dr5")
theme_override_font_sizes/font_size = 30
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI_Instructions" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(480, 50)
texture = ExtResource("5_agtaa")

[node name="ETHand" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(-62, 379)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_a14r8")
script = ExtResource("4_48xi3")

[node name="HandArea2d" type="Area2D" parent="CanvasLayer/ETHand"]

[node name="FingerCollision" type="CollisionShape2D" parent="CanvasLayer/ETHand/HandArea2d"]
position = Vector2(985, -340)
shape = SubResource("RectangleShape2D_nf4d3")

[node name="Button" type="Button" parent="CanvasLayer/ETHand"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -975.0
offset_top = 243.0
offset_right = 925.0
offset_bottom = 373.0
rotation = -0.331613

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 960.0
offset_bottom = 540.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 75
text = "DRAG THE HAND
TO THE PHONE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3dk8w")
autoplay = true
bus = &"Music"

[node name="PhoneCalling" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_31l73")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jndra")
}

[node name="UFO" type="Sprite2D" parent="."]
position = Vector2(1185, 263)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_r0i53")

[node name="UFOLight" type="Sprite2D" parent="UFO"]
visible = false
position = Vector2(8, 53)
texture = ExtResource("12_rsw78")

[node name="ET" type="Sprite2D" parent="."]
position = Vector2(135, 577)
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_uah5n")

[node name="Shout" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_a8u5r")

[node name="MIB" type="Sprite2D" parent="."]
position = Vector2(-278, 327)
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_2gu8e")

[node name="MIBLight" type="Sprite2D" parent="MIB"]
position = Vector2(-440, -33.3333)
texture = ExtResource("16_aywrg")

[node name="Neuralizer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_uigep")
bus = &"SFX"

[node name="Running" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_m1fkh")

[connection signal="area_entered" from="CanvasLayer/Phone/PhoneArea2d" to="." method="_on_phone_area_2d_area_entered"]
[connection signal="button_down" from="CanvasLayer/ETHand/Button" to="CanvasLayer/ETHand" method="_on_button_button_down"]
[connection signal="button_up" from="CanvasLayer/ETHand/Button" to="CanvasLayer/ETHand" method="_on_button_button_up"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
